# OpenCV

./: BlobDetector.cpp  BlobDetector.h  CMakeLists.txt  Camera.cpp  Camera.h  linearalgebra.hh  main.cpp  out_camera_data.xml
